# advent-of-code-2025

./: LICENSE  pyproject.toml
src/advent_of_code_2025/: __init__.py  utils.py
src/advent_of_code_2025/day_1/: day_1.py
src/advent_of_code_2025/day_2/: day_2.py
src/advent_of_code_2025/day_3/: day_3.py
src/advent_of_code_2025/day_4/: day_4.py
src/advent_of_code_2025/day_5/: day_5.py
src/advent_of_code_2025/day_6/: day_6.py
tests/day_1/: test_day_1.py
tests/day_2/: test_day_2.py
tests/day_3/: test_day_3.py
tests/day_4/: test_day_4.py
tests/day_5/: test_day_5.py
tests/day_6/: test_day_6.py
